--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,7 @@
 		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-184131220-1', 'auto');
+		ga('require', 'OPT-5Z5SDSM')
 		ga('send', 'pageview');
 	</script>
 	<!-- End Google Analytics -->
